# Nycticorax

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  END_USER_IMPROVEMENTS.md  README.md  SETUP_REVIEW.md  benchmark_model_comparison.md  benchmarkresult_traces.md  benchmarkresults.md  docker-compose.yml  example_prompt.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: live_cases.json  routing_cases.json
scripts/: generate_example_prompt.py  read_bad_bot_feedback.py
src/cinclus/: bot.py  main.py  usage.py
src/nycti/: agent_eval.py  agent_trace.py  benchmarks.py  bot.py  bot_support.py  changelog.md  changelog.py  changelog_service.py  channel_aliases.py  config.py  debug_summary.py  diagnostics.py  error_debug.py  feedback.py  formatting.py  http_tls.py  live_benchmark_diagnostics.py  live_benchmark_fixture_tools.py  live_benchmark_regex.py  live_benchmark_storage.py  live_benchmarks.py  main.py  member_aliases.py  message_context.py  permissions.py  progress.py  prompt.md  prompts.py  (+9 more)
tests/: agent_eval_cases.json  test_action_commands.py  test_action_confirmation.py  test_agent_tooling.py  test_alpaca.py  test_benchmarks.py  test_bot.py  test_browser_security.py  test_changelog.py  test_changelog_service.py  test_channel_aliases.py  test_chat_context.py  test_chat_orchestrator.py  test_chat_tools.py  test_chat_tools_providers.py  test_composite_deep_research.py  test_config.py  test_debug_summary.py  test_deep_research.py  test_deep_research_budget.py  test_deep_research_edges.py  test_deployment_files.py  test_discord_core.py  test_discord_invocation.py  test_discord_progress.py  test_evidence.py  test_evidence_enforcement.py  test_example_prompt.py  test_feedback.py  test_file_sizes.py  test_formatting_images.py  test_http_tls.py  test_live_benchmark_commands.py  test_live_benchmark_fixture_validation.py  test_live_benchmark_policy.py  test_live_benchmark_storage.py  test_live_benchmarks.py  test_llm_client.py  test_llm_cross_provider_fallback.py  test_llm_reasoning.py  (+40 more)
(+114 files in other folders)
