[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nycti"
version = "0.1.0"
description = "Nycti: a low-cost Discord AI bot MVP with selective long-term memory."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.4.0,<3.0.0",
  "openai>=1.109.1,<2.0.0",
  "SQLAlchemy>=2.0.36,<3.0.0",
  "psycopg[binary]>=3.2.3,<4.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "pillow>=9.4.0,<12.0.0",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.52.0,<2.0.0",
]
dev = [
  "mypy>=1.11.0,<2.0.0",
  "playwright>=1.52.0,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.9.0,<1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nycti = ["prompt.md", "changelog.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
